tiny_basic_grammar.ebnf
<line> ::= <number> <statement> CR | <statement> CR

<statement> ::= PRINT <expression-list>
              IF <expression> <relational-op> <expression> THEN <statement>
              INPUT <identifier-list>
              LET <identifier = expression>
              GOTO <expression>
              GOSUB <expression>
              RETURN
              END

<digit> ::= 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
<letter> ::= A | B | C | D | E | F | G | H | I | J | K | L | M | N | O | P | Q | R | S | T | U | V | W | X | Y | Z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y
<factor> ::= <identifier> | <number> | <expression>
<term> ::= <factor> [(* | /) <factor>]*
<expression> ::= [+ | -] <term> [(+ | -) <term>]*
<expression-list> ::= <expression> [, <expression>]*
<identifier> ::= <letter>
<identifier-list> ::= <identifier> [, <identifier>]*
<number> ::= <digit> <digit>*
<relational-op> ::= < [> | =] | > [< | =] | =
<string> ::= "[<letter> | <digit>]*"
